--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,6 +152,8 @@
         padding: 32px;
         border-radius: 12px;
         display: flex;
+        min-height: 200px;
+        height: 100%;
         background-image: linear-gradient(90deg, rgb(138 255 228 / 30%), rgb(153 255 56 / 30%));
         /* background-image: linear-gradient(90deg, rgba(138, 213, 255, 0.3), rgba(56, 88, 255, 0.3)); */
     }
@@ -277,11 +279,12 @@
     }
     
     .fac__names {
-        padding-top: 40px;
-        padding-bottom: 16px;
+        /* padding-top: 40px;
+        padding-bottom: 16px; */
         font-size: 24px;
-        line-height: 64px;
+        /* line-height: 64px; */
         font-weight: 700;
+        margin-bottom: 15px;
     }
     
     .fac__description {
@@ -308,7 +311,7 @@
         transform: translateX(10px);
         right: 0;
         bottom: 0;
-        z-index: 0;
+        z-index: -1;
         display: block;
         height: 32px;
         width: 32px;
@@ -382,6 +385,7 @@
     
     .event__container {
         width: 100% !important;
+        margin-bottom: 100px;
     }
     
     .event__container__content {
@@ -424,6 +428,7 @@
     }
     
     .fac__cards__second {
+        height: 90%;
         position: relative;
         padding: 32px;
         margin: 20px;
@@ -436,12 +441,16 @@
     
     .image__27 {
         position: absolute;
-        bottom: 0;
+        top: 0;
         right: 0;
-        top: auto;
         left: auto;
-        max-width: 60%;
+        bottom: auto;
+        max-width: 260px;
+        object-fit: cover;
+        -o-object-position: 0% 50%;
+        object-position: 0% 50%;
         height: 100%;
+        z-index: -1;
     }
     
     .card__section {
@@ -483,7 +492,7 @@
     }
     
     .fac__cards__content {
-        width: 60%;
+        width: 50%;
     }
     
     .section__title {
@@ -763,6 +772,12 @@
             line-height: 50px;
             font-weight: 700;
         }
+        .headline {
+            font-size: 20px;
+        }
+        .fac__names {
+            font-size: 22px;
+        }
     }
     
     @media screen and (max-width: 768px) {
@@ -809,6 +824,7 @@
         .card__section {
             padding-left: 0 !important;
             padding-right: 0 !important;
+            margin-bottom: 80px;
         }
         .second {
             padding-top: 0 !important;
@@ -872,9 +888,19 @@
         .button {
             padding: 17px 27px;
         }
+        .fac__icon {
+            top: 15px;
+            left: 15px;
+        }
+        .second__wrapper {
+            margin-bottom: 80px;
+        }
     }
     
     @media screen and (max-width: 577px) {
+        .row {
+            align-items: center;
+        }
         .wrapper {
             padding-left: 20px;
             padding-right: 20px;
@@ -886,6 +912,9 @@
         .headache {
             width: 70% !important;
         }
+        .headline {
+            font-size: 18px;
+        }
         .info:nth-child(2) .icon_svg {
             margin-left: 0px !important;
         }
@@ -894,6 +923,12 @@
         }
         .card__info {
             padding: 16px;
+        }
+        .card__section {
+            margin-bottom: 50px;
+        }
+        .event__container {
+            margin-bottom: 60px;
         }
         .hero_1 {
             font-size: 32px;
@@ -929,6 +964,9 @@
             padding-left: 20px;
             padding-right: 20px;
         }
+        .cards {
+            min-height: 100px;
+        }
         .cards__section {
             padding-left: 20px;
             padding-right: 20px;
@@ -943,7 +981,6 @@
         .fac__name {
             font-size: 20px;
             line-height: 28px;
-            padding-top: 84px;
         }
         .fac__description {
             margin-top: 30px;
